# TeaTime

./: .gitignore  README.md
src/: CMakeLists.txt  Version.h.in
src/firmware/: CMakeLists.txt
src/frontend/: CMakeLists.txt  Frontend.cc  Frontend.h  ScreenManager.cc  ScreenManager.h
src/frontend/screens/: FirmwareUpdateScreen.cc  FirmwareUpdateScreen.h  Screen.cc  Screen.h
src/frontend/screens/settings/: BrightnessScreen.cc  BrightnessScreen.h  FirmwareValidationScreen.cc  FirmwareValidationScreen.h  SettingsScreen.cc  SettingsScreen.h  StepsGoalScreen.cc  StepsGoalScreen.h  SystemInfoScreen.cc  SystemInfoScreen.h  WakeUpModeScreen.cc  WakeUpModeScreen.h
src/frontend/screens/watchfaces/: InfographWatchface.cc  InfographWatchface.h  UtilityWatchface.cc  UtilityWatchface.h  Watchface.cc  Watchface.h
src/interfaces/: BackendInterface.h  FrontendInterface.h  SettingsInterface.h
src/interfaces/backend-services/: BatteryInterface.h  BluetoothInterface.h  DateTimeInterface.h  DisplayInterface.h  FileSystemInterface.h  FirmwareValidationInterface.h  MotionInterface.h  WatchdogInterface.h
src/libs/: CMakeLists.txt  lv_conf.h
src/settings/: CMakeLists.txt  Settings.cc  Settings.h
src/simulator/: main.cc
src/simulator/backend-mockup/: CMakeLists.txt  MockupBackend.cc  MockupBackend.h  MockupBattery.cc  MockupBattery.h  MockupBluetooth.cc  MockupBluetooth.h  MockupDateTime.cc  MockupDateTime.h  MockupDisplay.cc  MockupDisplay.h  MockupFileSystem.cc  MockupFileSystem.h  MockupFirmwareValidation.cc  MockupFirmwareValidation.h  MockupMotion.cc  MockupMotion.h  MockupWatchdog.cc  MockupWatchdog.h
